--- a/CP4_V2/package.json
+++ b/CP4_V2/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "generate-docs": "jsdoc src/ -d docs/"
   },
   "dependencies": {
     "express": "^4.21.1",
@@ -36,6 +37,7 @@
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdoc": "^4.0.4",
     "vite": "^6.0.2"
   }
 }
